Customer Churn.ipynb

--- a/Customer Churn.ipynb
+++ b/Customer Churn.ipynb
@@ -14,7 +14,7 @@
     "tags": []
    },
    "source": [
-    "CUSTOMER CHURN PROJECT - SHUBHAM KUMBHAR :\n",
+    "CUSTOMER CHURN PROJECT -\n",
     "In the telecom industry, customers churning to competitors is big issue. This project analyzes the company data and finds insights about why customers might be churning out, and establish steps to prevent it."
    ]
   },
